| Summary: | ASTERISK-28626: Missing arguments in PJSIP_CONTACT function documentation | ||
| Reporter: | Pascal Cadotte Michaud (pc-m) | Labels: | |
| Date Opened: | 2019-11-21 07:26:41.000-0600 | Date Closed: | 2019-12-16 06:55:57.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Functions/General |
| Versions: | 16.6.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The documentation for the PJSIP_CONTACT does not show that `rtt` and `status` are valid arguments | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-11-21 07:26:43.516-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-12-04 18:28:35.703-0600 Change 13273 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13273|https://gerrit.asterisk.org/c/asterisk/+/13273] By: Friendly Automation (friendly-automation) 2019-12-04 18:30:24.676-0600 Change 13275 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13275|https://gerrit.asterisk.org/c/asterisk/+/13275] By: Friendly Automation (friendly-automation) 2019-12-04 18:36:52.788-0600 Change 13230 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13230|https://gerrit.asterisk.org/c/asterisk/+/13230] By: Friendly Automation (friendly-automation) 2019-12-04 18:48:36.344-0600 Change 13274 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13274|https://gerrit.asterisk.org/c/asterisk/+/13274] By: Joshua C. Colp (jcolp) 2019-12-11 08:27:05.497-0600 This caused an xmllint validation error and I've reverted it for now until it can be investigated and understood/resolved. By: Pascal Cadotte Michaud (pc-m) 2019-12-11 09:06:41.240-0600 I'll get the schema declaration to comply with xmllint and open a new PR on Gerrit. By: Friendly Automation (friendly-automation) 2019-12-16 06:55:58.432-0600 Change 13423 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13423|https://gerrit.asterisk.org/c/asterisk/+/13423] By: Friendly Automation (friendly-automation) 2019-12-16 06:59:34.397-0600 Change 13418 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13418|https://gerrit.asterisk.org/c/asterisk/+/13418] By: Friendly Automation (friendly-automation) 2019-12-16 07:00:09.689-0600 Change 13421 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13421|https://gerrit.asterisk.org/c/asterisk/+/13421] By: Friendly Automation (friendly-automation) 2019-12-16 07:00:59.419-0600 Change 13422 merged by Friendly Automation: PJSIP_CONTACT: add missing argument documentation [https://gerrit.asterisk.org/c/asterisk/+/13422|https://gerrit.asterisk.org/c/asterisk/+/13422] | ||